--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,81 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+  font-family: Jost, system-ui, Helvetica, Arial, sans-serif;
+  background-color: rgba(255, 255, 255, 1);
+
+  --background-blue: rgba(72, 66, 131, 1);
+  --background-grey: rgba(68, 75, 88, 1);
+  --background-grey-light: rgba(246, 246, 246, 1);
+
+  --button-red-default: rgba(241, 79, 79, 1);
+  --button-red-hover: rgba(140, 40, 40, 1);
+  --button-red-disabled: rgba(248, 175, 175, 1);
+
+  --text-contrast: rgba(255, 255, 255, 1);
+  --text-contrast-hover: rgba(196, 196, 196, 1);
+  --text-grey-dark: rgba(68, 75, 88, 1);
+  --text-grey-light: rgba(178, 181, 187, 1);
+
+
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
 
 body {
   margin: 0;
   display: flex;
-  place-items: center;
-  min-width: 320px;
+  flex-direction: column;
+  align-items: center;
+  box-sizing: border-box;
+  max-width: 1440px;
   min-height: 100vh;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+
+@font-face {
+  font-family: 'Jost';
+  font-style: normal;
+  font-weight: 400;
+  font-stretch: normal;
+  font-display: swap;
+  src: url('./fonts/Jost-Regular.woff2') format('woff2'),
+    url('./fonts/Jost-Regular.woff') format('woff'),
+    url('./fonts/Jost-Regular.ttf') format('truetype');
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
+@font-face {
+  font-family: 'Jost';
+  font-style: normal;
   font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  font-stretch: normal;
+  font-display: swap;
+  src: url('./fonts/Jost-Medium.woff2') format('woff2'),
+    url('./fonts/Jost-Medium.woff') format('woff'),
+    url('./fonts/Jost-Medium.ttf') format('truetype');
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+@font-face {
+  font-family: 'Jost';
+  font-style: normal;
+  font-weight: 600;
+  font-stretch: normal;
+  font-display: swap;
+  src: url('./fonts/Jost-SemiBold.woff2') format('woff2'),
+    url('./fonts/Jost-SemiBold.woff') format('woff'),
+    url('./fonts/Jost-SemiBold.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Jost';
+  font-style: normal;
+  font-weight: 700;
+  font-stretch: normal;
+  font-display: swap;
+  src: url('./fonts/Jost-Bold.woff2') format('woff2'),
+    url('./fonts/Jost-Bold.woff') format('woff'),
+    url('./fonts/Jost-Bold.ttf') format('truetype');
 }
