--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 :root {
   font-family: Jost, system-ui, Helvetica, Arial, sans-serif;
   background-color: rgba(255, 255, 255, 1);
+  border-radius: 4px;
 
   --background-blue: rgba(72, 66, 131, 1);
   --background-grey: rgba(68, 75, 88, 1);
@@ -15,6 +16,10 @@
   --text-grey-dark: rgba(68, 75, 88, 1);
   --text-grey-light: rgba(178, 181, 187, 1);
 
+  --space3XL: 40px;
+
+  --transition-duration: 0.3s;
+  --transition-timing-function: ease-in-out;
 
 
   color-scheme: light dark;
@@ -26,7 +31,7 @@
 
 
 body {
-  margin: 0;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -35,6 +40,9 @@ body {
   min-height: 100vh;
 }
 
+* {
+  box-shadow: 0 0 0 1px red;
+}
 
 @font-face {
   font-family: 'Jost';
