--- a/src/components/Footer/footer.module.css
+++ b/src/components/Footer/footer.module.css
@@ -1,10 +1,10 @@
 .footerContainer {
-  position: fixed;
-  left: 0;
-  bottom: 0;
   box-sizing: border-box;
+  max-width: 1440px;
   width: 100%;
   height: 90px;
+  position: fixed;
+  bottom: 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
