--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,9 @@
 :root {
   font-family: Jost, system-ui, Helvetica, Arial, sans-serif;
   background-color: rgba(255, 255, 255, 1);
-  border-radius: 4px;
+
+
+  --border-radius: 4px;
 
   --background-blue: rgba(72, 66, 131, 1);
   --background-grey: rgba(68, 75, 88, 1);
@@ -18,7 +20,7 @@
 
   --space3XL: 40px;
 
-  --transition-duration: 0.3s;
+  --transition-duration: 0.5s;
   --transition-timing-function: ease-in-out;
 
 
@@ -32,6 +34,7 @@
 
 body {
   margin: 0 auto;
+  padding: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
