--- a/src/components/Footer/footer.module.css
+++ b/src/components/Footer/footer.module.css
@@ -3,13 +3,12 @@
   max-width: 1440px;
   width: 100%;
   height: 90px;
-  position: fixed;
-  bottom: 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
   background-color: var(--background-grey);
   padding: 0 130px;
+  margin: auto;
 }
 
 
