--- a/src/components/GoodsList/goodsList.module.css
+++ b/src/components/GoodsList/goodsList.module.css
@@ -8,6 +8,10 @@
   gap: 48px;
 }
 
+.goodsContainer:nth-child(4) {
+  justify-self: center;
+}
+
 .title {
   margin: 0;
   padding: 0;
@@ -16,4 +20,34 @@
   font-style: normal;
   font-weight: 700;
   line-height: 1.56;
+}
+
+.buttonContainer {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 5px 0 0;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+
+}
+
+@container (max-width: 852px) {
+  .goodsContainer {
+
+    padding: 48px 90px 48px;
+  }
+
+}
+
+@container (max-width: 584px) {
+  .goodsContainer {
+
+    padding: 48px 20px 48px;
+  }
+
+  .title {
+    font-size: 30px;
+  }
+
 }
