--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -29,3 +29,29 @@
   display: flex;
   flex-direction: column;
 }
+
+
+
+@container (max-width: 852px) {
+  .headerContainer {
+    padding: 0 90px;
+    gap: 40px;
+  }
+
+  .linkContainer {
+    flex-wrap: wrap;
+    gap: 16px;
+  }
+}
+
+@container (max-width: 584px) {
+  .headerContainer {
+    padding: 0 20px;
+    gap: 20px;
+  }
+
+  .linkContainer {
+    justify-content: flex-end;
+    gap: 10px;
+  }
+}
