--- a/src/components/ProductListItem/productlistItem.module.css
+++ b/src/components/ProductListItem/productlistItem.module.css
@@ -10,6 +10,7 @@
 .imageWrapper {
   margin: 0;
   padding: 0;
+  min-width: 350px;
   height: 300px;
   position: relative;
   overflow: hidden;
@@ -19,6 +20,7 @@
 .image {
   margin: 0;
   padding: 0;
+  width: 100%;
   height: 100%;
   object-fit: cover;
   transition: transform 0.3s ease;
@@ -121,4 +123,47 @@
 .listItem:hover .overlay,
 .listItem:hover .actions {
   opacity: 1;
+}
+
+
+@container (max-width: 1300px) {
+  .imageWrapper {
+    min-width: 250px;
+    height: 200px;
+
+  }
+
+}
+
+@container (max-width: 1032px) {
+  .imageWrapper {
+    min-width: 150px;
+    height: 180px;
+
+  }
+
+}
+
+@container (max-width: 852px) {
+  .imageWrapper {
+    min-width: 250px;
+    height: 200px;
+
+
+  }
+
+}
+
+@container (max-width: 742px) {
+  .imageWrapper {
+    height: 370px;
+  }
+
+}
+
+@container (max-width: 584px) {
+  .imageWrapper {
+    height: 200px;
+  }
+
 }
