--- a/src/index.css
+++ b/src/index.css
@@ -33,6 +33,7 @@
 
 
 body {
+  container-type: inline-size;
   margin: 0 auto;
   padding: 0;
   display: flex;
@@ -43,9 +44,9 @@ body {
   min-height: 100vh;
 }
 
-* {
+/* * {
   box-shadow: 0 0 0 1px red;
-}
+} */
 
 @font-face {
   font-family: 'Jost';
