--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
   background-color: rgba(255, 255, 255, 1);
 
 
+
   --border-radius: 4px;
 
   --background-blue: rgba(72, 66, 131, 1);
@@ -41,12 +42,25 @@ body {
   align-items: center;
   box-sizing: border-box;
   max-width: 1440px;
-  min-height: 100vh;
+
 }
 
 /* * {
   box-shadow: 0 0 0 1px red;
 } */
+
+
+#root {
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  min-height: 100vh;
+}
+
+
 
 @font-face {
   font-family: 'Jost';
