--- a/src/components/Product/product.module.css
+++ b/src/components/Product/product.module.css
@@ -48,8 +48,10 @@
 }
 
 .title {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
+  display: flex;
   color: var(--text-grey-dark);
   font-size: 36px;
   font-style: normal;
@@ -187,4 +189,88 @@
   font-style: normal;
   font-weight: 500;
   line-height: 1.33;
+}
+
+.promotionContainer {
+  box-sizing: border-box;
+  margin: -9px 0 0;
+  padding: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.categories {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  color: rgba(100, 100, 100, 1);
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.5;
+}
+
+@container (max-width: 1300px) {
+  .productContainer {
+    padding: 48px 40px 162px;
+
+  }
+
+  .picture {
+    width: 300px;
+    height: 300px;
+  }
+
+
+}
+
+@container (max-width: 900px) {
+  .infoContainer {
+    flex-direction: column;
+
+  }
+
+}
+
+@container (max-width: 620px) {
+
+  .productContainer {
+    padding: 48px 40px 60px;
+
+  }
+
+  .infoContainer {
+    align-items: center;
+
+  }
+
+  .title {
+    font-size: 24px;
+  }
+
+  .productPricing {
+    flex-direction: column;
+  }
+
+  .picture {
+    width: 220px;
+    height: 220px;
+  }
+
+  .priceContainer {
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+  }
+
+  .paragraphContainer {
+    border-right: none;
+    align-items: center;
+  }
+
+  .promotionContainer {
+    flex-direction: column;
+    gap: 40px;
+  }
 }
