add gueryApi, fix single product card

--- a/src/components/Product/product.module.css
+++ b/src/components/Product/product.module.css
@@ -24,6 +24,7 @@
   max-width: 520px;
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
   gap: 10px;
 }
 
@@ -33,6 +34,7 @@
   padding: 0;
   width: 520px;
   height: 520px;
+  object-fit: contain;
   border-radius: var(--border-radius);
 }
 
