--- a/src/components/CartListItem/cartListItem.module.css
+++ b/src/components/CartListItem/cartListItem.module.css
@@ -25,7 +25,7 @@
   margin: 0;
   padding: 0;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
   border-radius: var(--border-radius);
 }
 
