--- a/src/components/PictureGallery/pictureGallery.module.css
+++ b/src/components/PictureGallery/pictureGallery.module.css
@@ -1,6 +1,7 @@
 .pictureGallery {
   box-sizing: border-box;
   list-style: none;
+  max-height: 70px;
   padding: 0;
   margin: 0;
   display: flex;
@@ -17,6 +18,8 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  width: 70px;
+  height: 70px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -30,8 +33,8 @@
   margin: 0;
   padding: 0;
   display: flex;
-  width: 100%;
-  height: 100%;
+  width: 70px;
+  height: 70px;
   object-fit: contain;
   border-radius: var(--border-radius);
   cursor: pointer;
@@ -53,11 +56,6 @@
     padding-left: 40px;
   }
 
-  .pictureGalleryImage {
-    width: 70px;
-    height: 70px;
-  }
-
 }
 
 @container (max-width: 620px) {
@@ -66,9 +64,5 @@
     padding-left: 40px;
   }
 
-  .pictureGalleryImage {
-    width: 50px;
-    height: 50px;
-  }
 
 }
