--- a/src/components/ProductListItem/productlistItem.module.css
+++ b/src/components/ProductListItem/productlistItem.module.css
@@ -22,7 +22,7 @@
   padding: 0;
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
   transition: transform 0.3s ease;
 }
 
