--- a/src/components/Accordion/accordion.module.css
+++ b/src/components/Accordion/accordion.module.css
@@ -18,6 +18,7 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+  transition: padding 0.3s ease;
 }
 
 .item.close {
@@ -43,7 +44,7 @@
 }
 
 .content {
-  max-height: 0;
+  height: 0;
   width: 100%;
   overflow: hidden;
   transition: max-height 0.3s ease, padding 0.3s ease;
@@ -66,7 +67,7 @@
 
 
 .content.open {
-  max-height: 200px;
+  height: auto;
   width: 100%;
   padding: 20px 0 18px;
 }
