--- a/src/components/LoginForm/loginForm.module.css
+++ b/src/components/LoginForm/loginForm.module.css
@@ -61,3 +61,19 @@
   font-weight: 400;
   line-height: 1.38;
 }
+
+@container (max-width: 680px) {
+  .formContainer {
+    padding: 100px 10px 50px;
+    min-width: 200px;
+    max-width: 320px;
+    gap: 52px;
+  }
+
+  .innerContainer {
+    padding: 30px 10px;
+    min-width: 280px;
+    gap: 30px;
+
+  }
+}
